--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   background: url('./robot.gif');
   background-size: contain;
   background-position: left center;
@@ -48,6 +49,15 @@ button:disabled {
   filter: brightness(30%);
 }
 
+.jokeTypes {
+  margin-top: 1rem;
+  transform: scale(0.95);
+}
+
+.jokeTypes button {
+  margin: 5px;
+}
+
 /* Media query for tablet or smaller */
 @media screen and (max-width: 1000px) {
   .container {
@@ -56,5 +66,11 @@ button:disabled {
   }
   button {
     box-shadow: 5px 5px 30px 20px rgba(0, 0, 0, 0.5);
+  }
+  .jokeTypes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
